--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-       
+        <!--
+        <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+        -->
     <title>wjSync</title>
 </head>
 
