--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">wjSync</a>
       <input
         class="form-control form-control-dark w-100"
         type="text"
