removed / from the path on dashboard

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
   </style>
   <!-- Custom styles for this template -->
-  <link href="/css/dashboard.css" rel="stylesheet" />
+  <link href="css/dashboard.css" rel="stylesheet" />
   <title>wjSync</title>
 </head>
 
