--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
   </style>
   <!-- Custom styles for this template -->
   <link href="css/dashboard.css" rel="stylesheet" />
-  <title>wjSync</title>
+  <title>Watch-Jewel Sync</title>
 </head>
 
 ///
 
 <body>
   <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">wjSync</a>
-    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search" />
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">watch-jewel sync</a>
+    <!-- <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search" />-->
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
         <a class="nav-link" href="#">Sign out</a>
@@ -102,11 +102,10 @@
 
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-          <h1 class="h2">Json files</h1>
-
+          <h1 class="h2">Dashboard</h1>
         </div>
 
-
+        <div id="jsonContent"></div>
 
       </main>
     </div>
